add: stars and player

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div class="main">
+        <img src="./public/images/starship.jpg" width="300" height="300" alt="starship" id="starship">
         <canvas id="gameCanvas"></canvas>
     </div>
-    <script type="module" src="./js/game.js"></script>
+    <script src="./js/player.js"></script>
+    <script src="./js/stars.js"></script>
+    <script src="./js/game.js"></script>
 </body>
 </html>
