--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="assets">
+        <img src="./public/images/starship.png"  alt="starship" id="starship">
+    </div>
     <div class="main">
-        <img src="./public/images/starship.jpg" width="300" height="300" alt="starship" id="starship">
         <canvas id="gameCanvas"></canvas>
     </div>
     <script src="./js/player.js"></script>
