--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="main">
         <canvas id="gameCanvas"></canvas>
     </div>
+    <script src="./js/laser.js"></script>
     <script src="./js/player.js"></script>
     <script src="./js/stars.js"></script>
     <script src="./js/game.js"></script>
