change: star movement; add: enemy

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 <body>
     <div id="assets">
         <img src="./public/images/starship.png"  alt="starship" id="starship">
+        <img src="./public/images/enemy1.png" alt="enemy1" id="enemy1">
+        <img src="./public/images/enemy2.png" alt="enemy2" id="enemy2">
+        <img src="./public/images/enemy3.png" alt="enemy3" id="enemy3">
+        <img src="./public/images/enemy4.png" alt="enemy4" id="enemy4">
+        <img src="./public/images/enemy5.png" alt="enemy5" id="enemy5">
     </div>
     <div class="main">
         <canvas id="gameCanvas"></canvas>
     </div>
+    <script src="./js/enemy.js"></script>
     <script src="./js/laser.js"></script>
     <script src="./js/player.js"></script>
     <script src="./js/stars.js"></script>
